--- a/new/css/src/pag/profile.styl
+++ b/new/css/src/pag/profile.styl
@@ -5,6 +5,9 @@
 		display inline-block
 		transition margin 600ms linear
 		vertical-align top
+		height 600px - 40px
+		position relative
+		width 1024px
 
 	.to-left
 		margin-left -1024px
@@ -25,14 +28,34 @@
 		background url("../img/social/twitter.png")
 		display block
 		height 20px
-		margin-left auto
-		margin-right auto
-		margin-top 4px
 		width 59px
+
+	.stats
+		display none
+
+		
+
+		.info
+			margin-bottom 2em
+
+			/*h2
+				padding-left 52px
+
+			ul
+				padding-left 70px*/
+
+			ul
+			.bluff-wrapper
+				display inline-block
+				vertical-align top
+
+			ul
+			.graph
+				box-sizing brder-box
+				width 50%
 
 	.options
 		display none
-		//position relative
 
 		.popup
 			margin-top -65px
@@ -64,6 +87,11 @@
 					transform rotateX(0deg) rotateY(0deg)
 					opacity 1
 					pointer-events all
+
+			.tweet-button
+				margin-left auto
+				margin-right auto
+				margin-top 4px
 
 			.face
 				box-sizing border-box
