--- a/new/css/src/util/general.styl
+++ b/new/css/src/util/general.styl
@@ -77,10 +77,10 @@ section
 	background-color color-highlight2-3
 	box-shadow 0 0 0 4px white, 0 0 0 8px color-highlight2-3
 	border-radius 40px
-	height @border-radius
+	height 40px
 	position absolute
 	transition box-shadow 800ms linear
-	width @height
+	width 40px
 	z-index 9999
 
 .clearfix:before
