--- a/new/css/main.css
+++ b/new/css/main.css
@@ -483,6 +483,9 @@ section .popup input:focus {
   -ms-transition: margin 600ms linear;
   transition: margin 600ms linear;
   vertical-align: top;
+  height: 560px;
+  position: relative;
+  width: 1024px;
 }
 .profile .to-left {
   margin-left: -1024px;
@@ -503,10 +506,30 @@ section .popup input:focus {
   background: url("../img/social/twitter.png");
   display: block;
   height: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 4px;
   width: 59px;
+}
+.profile .stats {
+  display: none;
+}
+.profile .stats .info {
+  margin-bottom: 2em;
+/*h2
+				padding-left 52px
+
+			ul
+				padding-left 70px*/
+}
+.profile .stats .info ul,
+.profile .stats .info .bluff-wrapper {
+  display: inline-block;
+  vertical-align: top;
+}
+.profile .stats .info ul,
+.profile .stats .info .graph {
+  -webkit-box-sizing: brder-box;
+  -moz-box-sizing: brder-box;
+  box-sizing: brder-box;
+  width: 50%;
 }
 .profile .options {
   display: none;
@@ -566,6 +589,11 @@ section .popup input:focus {
   -ms-filter: none;
   filter: none;
   pointer-events: all;
+}
+.profile .badges .badge .tweet-button {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4px;
 }
 .profile .badges .badge .face {
   -webkit-box-sizing: border-box;
